--- a/scooters-first-page.css
+++ b/scooters-first-page.css
@@ -11,7 +11,7 @@ p {
     font-size: 30px;
 }
 
-#content {
+#first-page {
     display: flex;
     width: 100%;
     height: 150px;
@@ -24,3 +24,14 @@ p {
     text-align: center;
     margin: auto;
 }
+
+#accounts {
+    margin-top: 20px;
+    display: flex;
+    justify-content: space-between;
+}
+ #accounts > a {
+    border: 2px solid black;
+    width: 30%;
+    text-decoration: none;
+ }
