--- a/search-for-scooter.css
+++ b/search-for-scooter.css
@@ -53,6 +53,7 @@ div {
     /* border: 2px solid black; */
     width: 37%;
     align-items: center;
+    justify-content: center;
 }
 
 #info > a {
