--- a/search-for-scooter.css
+++ b/search-for-scooter.css
@@ -1,6 +1,7 @@
 * {
     padding: 0;
     margin: 0;
+    font-family: Andika;
 }
 
 div {
@@ -8,7 +9,7 @@ div {
 }
 
 #header {
-    height: 50px;
+    height: 40px;
     border-bottom: 4px solid black;
     box-shadow: 0 8px 3px #a1a3a3;
     /* padding: 30px; */
@@ -16,7 +17,7 @@ div {
 
 #header > p {
     margin-left: 15%;
-    font-size: 30px;
+    font-size: 25px;
 }
 
 #user-page-content {
@@ -54,6 +55,10 @@ div {
     width: 37%;
     align-items: center;
     justify-content: center;
+}
+
+#info > p {
+    font-size: 22px;
 }
 
 #info > a {
