--- a/search-for-scooter.css
+++ b/search-for-scooter.css
@@ -6,6 +6,7 @@
 
 body {
     background-color: #1A2930;
+    position: relative;
 }
 
 div {
@@ -13,12 +14,20 @@ div {
 }
 
 #header {
-    height: 40px;
+    background-color: #1A2930;
+    display:flex;
+    width: 100%;
+    height: 80px;
     border-bottom: 2px solid white;
     box-shadow: 0 3px 5px white;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 3;
 }
 
 #header > p {
+    margin-top: 35px;
     color:white;
     margin-left: 2%;
     font-size: 25px;
@@ -27,10 +36,11 @@ div {
 
 #user-page-content {
     font-size: 20px;
-    margin-top: 40px;
+    margin-top: 3%;
     width: 100%;
     display: grid;
     direction: column; 
+    z-index: 1;
 }
 
 #map-and-info {
@@ -48,20 +58,22 @@ div {
 
 #map {
     margin-left: 2%;
-    width: 93%;
+    width: 92%;
     box-shadow: 10px 10px 1px #a1a3a3;
 }
 
 #info-context {
     margin-right: 2%;
+    margin-left: 2%;
     border-left: 2px solid white;
+    width: 1%;
 }
 
 #info {
     display: none;
-    gap: 25px;
+    gap: 20px;
     margin-right: 4%;
-    margin-left: 4%;
+    margin-left: 2%;
     width: 100%;
     justify-content: center;
     align-content: space-between;
@@ -71,6 +83,7 @@ div {
 #info > p {
     font-size: 22px;
     color: white;
+    /* transition: width 2s; */
 }
 
 #info > a {
@@ -78,8 +91,4 @@ div {
     text-decoration: none;
     text-align: center;
     border: 1px solid white;
-}
-
-#info > #set-route {
-    margin-top: 100px;
 }
