--- a/search-for-scooter.css
+++ b/search-for-scooter.css
@@ -16,6 +16,7 @@ div {
 #header {
     background-color: #1A2930;
     display:flex;
+    justify-content:space-between;
     width: 100%;
     height: 80px;
     border-bottom: 2px solid white;
@@ -32,6 +33,26 @@ div {
     margin-left: 2%;
     font-size: 25px;
     font-weight: 600;
+}
+
+#search {
+    width: 23%;
+    margin-top: 35px;
+    margin-right: 2%;
+}
+
+#search-box {
+    width: 78%;
+    border: 3px solid #C5C1C0;
+}
+
+#search-button {
+    font-size: 18px;;
+    width: 25%;
+    color: white;
+    border: 1px solid white;
+    text-decoration: none;
+    padding: 0 5px 0 5px;
 }
 
 #user-page-content {
@@ -58,7 +79,7 @@ div {
 
 #map {
     margin-left: 2%;
-    width: 92%;
+    width: 91%;
     box-shadow: 10px 10px 1px #a1a3a3;
 }
 
